# jamboot

./: CMakeLists.txt  README.md  README.pl  README.pl.md
src/: affine.vertex.glsl  bml.h  common.glsl  crossgl.h  dot.fragment.glsl  game.cpp  game.h  gfx.cpp  main.cpp  noop.vertex.glsl  pulse.fragment.glsl  render_gl.cpp
